--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,5 @@ deploy:
   on:
     repo: vish-git/my-bio
   skip_cleanup: "true"
-  addons:
-    chrome: stable
-  before_install:
-    # start your web application and listen on `localhost`
-    google-chrome-stable --headless --no-sandbox --disable-gpu --remote-debugging-port=9222 http://localhost &
+  script:
+    - echo "skipping tests"
