--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ deploy:
   on:
     repo: vish-git/my-bio
   skip_cleanup: "true"
-  script:
-    - echo "skipping tests"
+addons:
+  chrome: stable
+before_install:
+  -  # start your web application and listen on `localhost`
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
