angular compiler included

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
 node_js:
   - node
+branches:
+  only:
+  - master
+before_script:
+  - npm install -g @angular/cli
+script:
+  - npm install
+  - npm run build
 deploy:
   provider: s3
   access_key_id: AKIAJ4U2VYBAPA674UQQ
