--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ deploy:
   region: ap-south-1
   acl: public_read
   skip_cleanup: "true"
-  local_dir: dist/*
+  local_dir: dist
 addons:
   chrome: stable
